<resources>
    <string name="app_name">Work Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <string name="tasks">Tasks</string>
    <string name="events">Events</string>
    <string name="shares">Share</string>
    <string name="sends">Send</string>
    <string name="delete">Delete</string>

    <string name="yourPanel">Dashboard</string>
    <string name="activity">Activity</string>

    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_activity_list_events">ListEventsActivity</string>
    <string name="title_activity_task_worktime">TaskWorktimeActivity</string>

</resources>
