<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tasks"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/tasks" />
        <item
            android:id="@+id/events"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/events" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />
    </group>

    <item android:title="@string/activity">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/shares" />
            <item
                android:id="@+id/send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/sends" />
        </menu>
    </item>

</menu>
